fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ h1 {
 
 .nav {
   position: fixed;
-  z-index: 3;
+  z-index: 10;
 }
 
 .navbar {
@@ -290,7 +290,7 @@ select:focus-visible {
 
 .sidebar {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
   width: 108px;
   right: 0;
@@ -314,7 +314,7 @@ select:focus-visible {
 
 .sidebar-btn {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   right: 0;
   bottom: 0;
 }
@@ -399,6 +399,10 @@ select:focus-visible {
 
   .mobile-hidden {
     display: none;
+  }
+
+  .hero-img{
+    height: 300px;
   }
 
 }
